--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -113,7 +113,7 @@
       },
       "field_name": {
         "content": "$2",
-        "example": "compose"
+        "example": "Subject"
       }
     }
   },
