--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -268,6 +268,10 @@
     "message": "Double-struck",
     "description": "An entry in the context menu. This is an entry for the Unicode font."
   },
+  "menuFontOutlined": {
+    "message": "Outlined",
+    "description": "An entry in the context menu. This is an entry for the Unicode font."
+  },
   "menuFontOther": {
     "message": "Other/Emojis",
     "description": "An entry in the context menu. This is an entry for the Unicode font."
